--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Icono -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  
+  <!-- Cambio de Icono -->
+  <link rel="icon" type="image/x-icon" href="./assets/icon_portafolio.png">
 
   <!-- Pagina de iconos Box icons -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
