Creacion del Perfil

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   
   <!-- Cambio de Icono -->
-  <link rel="icon" type="image/x-icon" href="./assets/icon_portafolio.png">
+  <link rel="icon" type="image/x-icon" href="./assets/icon_portfolio.png">
 
   <!-- Pagina de iconos Box icons -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
