--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>The Portfolio</title>
@@ -8,7 +8,7 @@
 
   <!-- Icono -->
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-  
+
   <!-- Cambio de Icono -->
   <link rel="icon" type="image/x-icon" href="./assets/icon_portfolio.png">
 
